--- a/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
+++ b/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/gm-debian-postinst.conf.sample,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -35,11 +35,6 @@ config
 demographics
 clinical
 $services$
-
-language library dirs = $language library dirs$
-/usr/lib/postgresql/lib/
-/usr/lib/pgsql/
-$language library dirs$
 
 #----------------------------------
 # services
@@ -132,6 +127,12 @@ procedural languages = $procedural languages$
 pg/SQL
 $procedural languages$
 
+language library dirs = $language library dirs$
+/usr/lib/postgresql/lib/
+/usr/lib/pgsql/
+/usr/local/pgsql/lib
+$language library dirs$
+
 #----------------------------------
 # languages
 #----------------------------------
@@ -160,7 +161,11 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf.sample,v $
-# Revision 1.5  2003-02-09 11:46:11  ncq
+# Revision 1.6  2003-02-23 19:13:08  ncq
+# - move language library dirs to [GnuMed defaults] and that to
+#   the bottom of the file as per suggestion by Andreas
+#
+# Revision 1.5  2003/02/09 11:46:11  ncq
 # - added core database option for registering services
 # - convenience function _run_query()
 #
