--- a/gnumed/gnumed/server/utils/bootstrap-standard-AU.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-standard-AU.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-standard-AU.conf.sample,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -33,34 +33,6 @@ config
 demographics
 clinical
 $services$
-
-language library dirs = $language library dirs$
-/usr/lib/postgresql/lib/
-/usr/lib/pgsql/
-/usr/local/pgsql/lib
-$language library dirs$
-
-#----------------------------------
-# these really shouldn't be changed
-[GnuMed defaults]
-
-database owner alias = GnuMed owner
-
-groups = $groups$
-gm-doctors
-_gm-doctors
-gm-staff_medical
-_gm-staff_medical
-gm-staff_office
-_gm-staff_office
-gm-trainees_medical
-gm-trainees_office
-gm-public
-$groups$
-
-procedural languages = $procedural languages$
-pg/SQL
-$procedural languages$
 
 #----------------------------------
 # services
@@ -133,6 +105,35 @@ name = postgres
 #password =
 
 #----------------------------------
+# these really shouldn't be changed
+#----------------------------------
+[GnuMed defaults]
+
+database owner alias = GnuMed owner
+
+groups = $groups$
+gm-doctors
+_gm-doctors
+gm-staff_medical
+_gm-staff_medical
+gm-staff_office
+_gm-staff_office
+gm-trainees_medical
+gm-trainees_office
+gm-public
+$groups$
+
+procedural languages = $procedural languages$
+pg/SQL
+$procedural languages$
+
+language library dirs = $language library dirs$
+/usr/lib/postgresql/lib/
+/usr/lib/pgsql/
+/usr/local/pgsql/lib
+$language library dirs$
+
+#----------------------------------
 # languages
 #----------------------------------
 [pg/SQL]
@@ -160,7 +161,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf.sample,v $
-# Revision 1.3  2003-02-15 09:10:53  ncq
+# Revision 1.4  2003-02-23 19:13:08  ncq
+# - move language library dirs to [GnuMed defaults] and that to
+#   the bottom of the file as per suggestion by Andreas
+#
+# Revision 1.3  2003/02/15 09:10:53  ncq
 # - split into bootstrap-standard-COUNTRY.* and migrate-standard.*
 #
 # Revision 1.2  2003/02/13 17:23:31  ncq
