--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf.sample
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf.sample,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -128,6 +128,7 @@ pg/SQL
 $procedural languages$
 
 language library dirs = $language library dirs$
+/usr/lib/postgresql/
 /usr/lib/postgresql/lib/
 /usr/lib/pgsql/
 /usr/local/pgsql/lib
@@ -161,7 +162,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf.sample,v $
-# Revision 1.1  2003-02-25 08:26:49  ncq
+# Revision 1.2  2003-03-26 15:47:54  ncq
+# - alas, some distros store procedural language libraries in /usr/lib/postgresql/
+#
+# Revision 1.1  2003/02/25 08:26:49  ncq
 # - moved here from server/utils/
 #
 # Revision 1.6  2003/02/23 19:13:08  ncq
