--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf.sample
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-archive.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -122,6 +122,7 @@ pg/SQL
 $procedural languages$
 
 language library dirs = $language library dirs$
+/usr/lib/postgresql/
 /usr/lib/postgresql/lib/
 /usr/lib/pgsql/
 /usr/local/pgsql/lib
@@ -143,7 +144,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf.sample,v $
-# Revision 1.2  2003-03-01 16:51:49  ncq
+# Revision 1.3  2003-03-26 15:47:54  ncq
+# - alas, some distros store procedural language libraries in /usr/lib/postgresql/
+#
+# Revision 1.2  2003/03/01 16:51:49  ncq
 # - updated
 #
 # Revision 1.1  2003/02/25 08:26:49  ncq
