--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf.sample
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-archive.conf.sample,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -15,7 +15,7 @@ interactive = yes
 
 description = $description$
 - suitable for GnuMed/Archive
-- a monolithic setup on localhost
+- a monolithic setup on local host
 - no test accounts
 - no test data
 - german translations included
@@ -73,13 +73,13 @@ $schema$
 #----------------------------------
 [database gm-archive]
 name = gm-archive-sample
-server alias = localhost
+server alias = local host
 
 #----------------------------------
 # servers
 #----------------------------------
-[server localhost]
-name = localhost
+[server local host]
+name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
@@ -144,7 +144,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf.sample,v $
-# Revision 1.3  2003-03-26 15:47:54  ncq
+# Revision 1.4  2003-03-30 20:57:37  ncq
+# - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
+#
+# Revision 1.3  2003/03/26 15:47:54  ncq
 # - alas, some distros store procedural language libraries in /usr/lib/postgresql/
 #
 # Revision 1.2  2003/03/01 16:51:49  ncq
