--- a/gnumed/gnumed/server/bootstrap/bootstrap-gm_db_system.conf.sample
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-gm_db_system.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-gm_db_system.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -82,13 +82,13 @@ name = gnumed
 
 # which [section] holds specifics about the server
 # hosting this databse -> [server ...]
-server alias = localhost
+server alias = local host
 
 #----------------------------------
-[server localhost]
+[server local host]
 
 # can be a host name or an IP address
-name = localhost
+name = 127.0.0.1
 
 # the port on which to connect to the server,
 # standard is 5432
@@ -204,7 +204,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf.sample,v $
-# Revision 1.2  2003-03-26 15:47:54  ncq
+# Revision 1.3  2003-03-30 20:57:37  ncq
+# - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
+#
+# Revision 1.2  2003/03/26 15:47:54  ncq
 # - alas, some distros store procedural language libraries in /usr/lib/postgresql/
 #
 # Revision 1.1  2003/02/25 08:26:49  ncq
