--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf.sample
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-DE.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -80,13 +80,13 @@ $schema$
 #----------------------------------
 [database core]
 name = gnumed
-server alias = localhost
+server alias = local host
 
 #----------------------------------
 # servers
 #----------------------------------
-[server localhost]
-name = localhost
+[server local host]
+name = 127.0.0.1
 port = 5432
 template database = template1
 super user alias = postgres
@@ -163,7 +163,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-DE.conf.sample,v $
-# Revision 1.2  2003-03-26 15:47:54  ncq
+# Revision 1.3  2003-03-30 20:57:37  ncq
+# - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
+#
+# Revision 1.2  2003/03/26 15:47:54  ncq
 # - alas, some distros store procedural language libraries in /usr/lib/postgresql/
 #
 # Revision 1.1  2003/02/25 08:26:49  ncq
