- renamed after discussion with native speaker :-)

--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
@@ -5,8 +5,8 @@
 
 #----------------------------------
 [revision control]
-file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf.sample,v $
-version = $Revision: 1.3 $
+file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-DE.conf,v $
+version = $Revision: 1.1 $
 
 #----------------------------------
 [installation]
@@ -15,11 +15,16 @@ interactive = yes
 
 description = $description$
 This will set up a standard monolithic test system for GnuMed
-that is void of any data. It is intended for migrating data
-from older databases. Hence it is, by definition, language
-independant.
+that is immediately useable. It will contain patient demographics,
+clinical tables, German translations and some sample data.
 
-The database name will be "gnumed-new" which is expected
+There's also some test accounts included for access to the
+database. Please refer to server/sql/gmTestAccounts.sql to
+learn more about those. YOU MUST make sure to remove them
+prior to going life on a production system because they
+currently apply to ALL databases.
+
+The database name will be "gnumed" which is expected
 to not exist prior to running this script.
 $description$
 
@@ -51,7 +56,11 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmidentity.sql
+sql/gmIdentityData.sql
+sql/gmIdentityTestData.sql
 sql/gmgis.sql
+sql/gmGisData.sql
+sql/country.specific/de/german-family_relations.sql
 $schema$
 
 [service clinical]
@@ -62,13 +71,15 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
+sql/gmClinicalData.sql
+sql/country.specific/de/german-gmclinical.sql
 $schema$
 
 #----------------------------------
 # databases
 #----------------------------------
 [database core]
-name = gnumed-new
+name = gnumed
 server alias = local host
 
 #----------------------------------
@@ -80,6 +91,7 @@ port = 5432
 template database = template1
 super user alias = postgres
 schema = $schema$
+sql/gmTestAccounts.sql
 $schema$
 
 #----------------------------------
@@ -150,8 +162,11 @@ CREATE TRUSTED PROCEDURAL LANGUAGE 'plpython' HANDLER plpython_call_handler;
 $language activation$
 
 #----------------------------------
-# $Log: migrate-standard.conf.sample,v $
-# Revision 1.3  2003-03-30 20:57:37  ncq
+# $Log: bootstrap-standard-DE.conf,v $
+# Revision 1.1  2003-03-30 22:18:53  ncq
+# - renamed after discussion with native speaker :-)
+#
+# Revision 1.3  2003/03/30 20:57:37  ncq
 # - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
 #
 # Revision 1.2  2003/03/26 15:47:54  ncq
@@ -164,6 +179,29 @@ $language activation$
 # - move language library dirs to [GnuMed defaults] and that to
 #   the bottom of the file as per suggestion by Andreas
 #
-# Revision 1.1  2003/02/14 12:18:52  ncq
-# - for migration, *no* data imported
+# Revision 1.1  2003/02/17 13:54:14  ncq
+# - standard with German translations
+#
+# Revision 1.6  2003/02/11 17:13:39  hinnef
+# added /usr/local/psql/lib to library dir list
+#
+# Revision 1.5  2003/02/09 11:46:11  ncq
+# - added core database option for registering services
+# - convenience function _run_query()
+#
+# Revision 1.4  2003/01/30 09:00:05  ncq
+# - fixed typo
+#
+# Revision 1.3  2003/01/28 13:39:14  ncq
+# - implemented schema import at the server level (= template database)
+# - this is mainly useful for importing users
+#
+# Revision 1.2  2003/01/27 01:48:03  ncq
+# - updated to be more complete, added description
+#
+# Revision 1.1  2003/01/26 12:47:17  ncq
+# - next generation from test-area/
+#
+# Revision 1.1  2003/01/22 22:50:36  ncq
+# - example of minimal monolithic database on localhost
 #
