--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -5,8 +5,8 @@
 
 #----------------------------------
 [revision control]
-file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf.sample,v $
-version = $Revision: 1.3 $
+file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
+version = $Revision: 1.1 $
 
 #----------------------------------
 [installation]
@@ -14,24 +14,17 @@ version = $Revision: 1.3 $
 interactive = yes
 
 description = $description$
-This will set up a standard monolithic test system for GnuMed
-that is immediately useable. It will contain patient demographics,
-clinical tables, Australian postcodes and some sample data.
-
-There's also some test accounts included for access to the
-database. Please refer to server/sql/gmTestAccounts.sql to
-learn more about those. YOU MUST make sure to remove them
-prior to going life on a production system because they
-currently apply to ALL databases.
-
-The database name will be "gnumed" which is expected
-to NOT exist prior to running this script.
+- suitable for GnuMed/Archive
+- a monolithic setup on local host
+- no test accounts
+- no test data
+- german translations included
 $description$
 
 services = $services$
 config
 demographics
-clinical
+documents
 $services$
 
 #----------------------------------
@@ -40,45 +33,46 @@ $services$
 [service config]
 name = default
 version = 0.1
-database alias = core
+database alias = gm-archive
 postgres version = 7.1
-registration database = core
+registration database = gm-archive
 schema = $schema$
 sql/gmconfiguration.sql
 sql/gmServices.sql
 $schema$
 
+# first one already imports gmServices, so ...
 [service demographics]
 name = personalia
 version = 0.1
-database alias = core
+database alias = gm-archive
 postgres version = 7.1
-registration database = core
+registration database = gm-archive
 schema = $schema$
 sql/gmidentity.sql
 sql/gmIdentityData.sql
 sql/gmIdentityTestData.sql
 sql/gmgis.sql
 sql/gmGisData.sql
-sql/country.specific/au/postcodes.au.sql
+sql/country.specific/de/german-family_relations.sql
 $schema$
 
-[service clinical]
-name = historica
+[service documents]
+name = blobs
 version = 0.1
-database alias = core
+database alias = gm-archive
 postgres version = 7.1
-registration database = core
+registration database = gm-archive
 schema = $schema$
-sql/gmclinical.sql
-sql/gmClinicalData.sql
+sql/gmBlobs.sql
+sql/country.specific/de/german-doc_types.sql
 $schema$
 
 #----------------------------------
 # databases
 #----------------------------------
-[database core]
-name = gnumed
+[database gm-archive]
+name = gm-archive-sample
 server alias = local host
 
 #----------------------------------
@@ -90,7 +84,7 @@ port = 5432
 template database = template1
 super user alias = postgres
 schema = $schema$
-sql/gmTestAccounts.sql
+gmArchiveAccounts.sql
 $schema$
 
 #----------------------------------
@@ -149,38 +143,46 @@ CREATE TRUSTED PROCEDURAL LANGUAGE 'plpgsql' HANDLER plpgsql_call_handler LANCOM
 $language activation$
 
 #----------------------------------
-[pg/Python]
-library name = plpython.so
-
-call handler = $call handler$
-CREATE FUNCTION plpython_call_handler () RETURNS OPAQUE AS '%s' LANGUAGE 'C';
-$call handler$
-
-language activation = $language activation$
-CREATE TRUSTED PROCEDURAL LANGUAGE 'plpython' HANDLER plpython_call_handler;
-$language activation$
-
-#----------------------------------
-# $Log: bootstrap-standard-AU.conf.sample,v $
-# Revision 1.3  2003-03-30 20:57:37  ncq
+# $Log: bootstrap-archive.conf,v $
+# Revision 1.1  2003-03-30 22:18:53  ncq
+# - renamed after discussion with native speaker :-)
+#
+# Revision 1.4  2003/03/30 20:57:37  ncq
 # - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
 #
-# Revision 1.2  2003/03/26 15:47:54  ncq
+# Revision 1.3  2003/03/26 15:47:54  ncq
 # - alas, some distros store procedural language libraries in /usr/lib/postgresql/
+#
+# Revision 1.2  2003/03/01 16:51:49  ncq
+# - updated
 #
 # Revision 1.1  2003/02/25 08:26:49  ncq
 # - moved here from server/utils/
 #
-# Revision 1.4  2003/02/23 19:13:08  ncq
+# Revision 1.6  2003/02/23 19:13:08  ncq
 # - move language library dirs to [GnuMed defaults] and that to
 #   the bottom of the file as per suggestion by Andreas
 #
-# Revision 1.3  2003/02/15 09:10:53  ncq
-# - split into bootstrap-standard-COUNTRY.* and migrate-standard.*
+# Revision 1.5  2003/02/17 13:57:41  ncq
+# - updated
 #
-# Revision 1.2  2003/02/13 17:23:31  ncq
-# - tailored description string to reflect purpose
+# Revision 1.4  2003/02/09 11:46:11  ncq
+# - added core database option for registering services
+# - convenience function _run_query()
 #
-# Revision 1.1  2003/02/13 17:20:59  ncq
-# - config file geared towards Australian GnuMed installations
+# Revision 1.3  2003/02/02 14:12:30  ncq
+# - add schema to server defs
+#
+# Revision 1.2  2003/01/26 13:14:36  ncq
+# - show a description before installing
+# - ask user for confirmation if interactive
+#
+# Revision 1.1  2003/01/26 12:47:17  ncq
+# - next generation from test-area/
+#
+# Revision 1.1  2003/01/24 13:40:02  ncq
+# - renamed bootstrap-archive.conf to bootstrap-archive.conf.sample
+#
+# Revision 1.1  2003/01/22 23:17:45  ncq
+# - example for setting up a GnuMed/Archive database
 #
