--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
@@ -5,8 +5,8 @@
 
 #----------------------------------
 [revision control]
-file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-gm_db_system.conf.sample,v $
-version = $Revision: 1.3 $
+file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template,v $
+version = $Revision: 1.1 $
 
 #----------------------------------
 [installation]
@@ -203,8 +203,11 @@ CREATE TRUSTED PROCEDURAL LANGUAGE 'plpython' HANDLER plpython_call_handler;
 $language activation$
 
 #----------------------------------
-# $Log: bootstrap-gm_db_system.conf.sample,v $
-# Revision 1.3  2003-03-30 20:57:37  ncq
+# $Log: bootstrap-standard.conf.template,v $
+# Revision 1.1  2003-03-30 22:18:53  ncq
+# - renamed after discussion with native speaker :-)
+#
+# Revision 1.3  2003/03/30 20:57:37  ncq
 # - make localhost be 127.0.0.1 as Mandrake happens to want to rename that to the local hostname :-)
 #
 # Revision 1.2  2003/03/26 15:47:54  ncq
