- added factored out gmBlobsData.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -64,6 +64,7 @@ database alias = gm-archive
 postgres version = 7.1
 registration database = gm-archive
 schema = $schema$
+sql/gmBlobsData.sql
 sql/gmBlobs.sql
 sql/country.specific/de/german-doc_types.sql
 $schema$
@@ -144,7 +145,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.1  2003-03-30 22:18:53  ncq
+# Revision 1.2  2003-04-07 11:15:02  ncq
+# - added factored out gmBlobsData.sql
+#
+# Revision 1.1  2003/03/30 22:18:53  ncq
 # - renamed after discussion with native speaker :-)
 #
 # Revision 1.4  2003/03/30 20:57:37  ncq
