--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -91,6 +91,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmBlobs.sql
+sql/gmBlobsData.sql
 sql/country.specific/de/german-doc_types.sql
 $schema$
 
@@ -165,7 +166,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.1  2003-04-01 13:03:55  ncq
+# Revision 1.2  2003-04-07 11:15:02  ncq
+# - added factored out gmBlobsData.sql
+#
+# Revision 1.1  2003/04/01 13:03:55  ncq
 # - for public databases
 #
 # Revision 1.1  2003/03/30 22:18:53  ncq
