--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -25,6 +25,7 @@ again to provide a current schema layout.
 
 Note: Do NOT rely on data stored in this database. It will
 get lost due to repeated bootstrapping !
+
 $description$
 
 services = $services$
@@ -166,7 +167,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.2  2003-04-07 11:15:02  ncq
+# Revision 1.3  2003-04-09 13:55:51  ncq
+# - some whitespace fixup
+#
+# Revision 1.2  2003/04/07 11:15:02  ncq
 # - added factored out gmBlobsData.sql
 #
 # Revision 1.1  2003/04/01 13:03:55  ncq
