- include new script gmIdentityViews.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -60,6 +60,7 @@ registration database = core
 # FIXME: add german-chipcard.sql
 schema = $schema$
 sql/gmidentity.sql
+sql/gmIdentityViews.sql
 sql/gmIdentityData.sql
 sql/gmIdentityTestData.sql
 sql/gmgis.sql
@@ -167,7 +168,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.3  2003-04-09 13:55:51  ncq
+# Revision 1.4  2003-04-18 13:21:16  ncq
+# - include new script gmIdentityViews.sql
+#
+# Revision 1.3  2003/04/09 13:55:51  ncq
 # - some whitespace fixup
 #
 # Revision 1.2  2003/04/07 11:15:02  ncq
