--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -56,6 +56,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmidentity.sql
+sql/gmIdentityViews.sql
 sql/gmIdentityData.sql
 sql/gmIdentityTestData.sql
 sql/gmgis.sql
@@ -162,7 +163,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.1  2003-03-30 22:18:53  ncq
+# Revision 1.2  2003-04-18 13:21:16  ncq
+# - include new script gmIdentityViews.sql
+#
+# Revision 1.1  2003/03/30 22:18:53  ncq
 # - renamed after discussion with native speaker :-)
 #
 # Revision 1.3  2003/03/30 20:57:37  ncq
