--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -50,6 +50,7 @@ postgres version = 7.1
 registration database = gm-archive
 schema = $schema$
 sql/gmidentity.sql
+sql/gmIdentityViews.sql
 sql/gmIdentityData.sql
 sql/gmIdentityTestData.sql
 sql/gmgis.sql
@@ -145,7 +146,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.2  2003-04-07 11:15:02  ncq
+# Revision 1.3  2003-04-18 13:21:16  ncq
+# - include new script gmIdentityViews.sql
+#
+# Revision 1.2  2003/04/07 11:15:02  ncq
 # - added factored out gmBlobsData.sql
 #
 # Revision 1.1  2003/03/30 22:18:53  ncq
