--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -21,7 +21,8 @@ interactive = yes
 # prompted whether she acutally wants to install this setup
 description = $description$
 This setup is not intended to actually be used. It just
-serves to document the config file options.
+serves to document the config file options. Also you cannot
+rely on this setup to import all necessary schema files.
 
 DO NOT USE !
 $description$
@@ -204,7 +205,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard.conf.template,v $
-# Revision 1.1  2003-03-30 22:18:53  ncq
+# Revision 1.2  2003-04-18 13:21:16  ncq
+# - include new script gmIdentityViews.sql
+#
+# Revision 1.1  2003/03/30 22:18:53  ncq
 # - renamed after discussion with native speaker :-)
 #
 # Revision 1.3  2003/03/30 20:57:37  ncq
