- factored out gmClinicalViews.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -80,6 +80,7 @@ registration database = core
 # FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
+sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
 $schema$
@@ -168,7 +169,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.4  2003-04-18 13:21:16  ncq
+# Revision 1.5  2003-04-28 20:47:15  ncq
+# - factored out gmClinicalViews.sql
+#
+# Revision 1.4  2003/04/18 13:21:16  ncq
 # - include new script gmIdentityViews.sql
 #
 # Revision 1.3  2003/04/09 13:55:51  ncq
