--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-DE.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -72,6 +72,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
+sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
 $schema$
@@ -164,7 +165,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-DE.conf,v $
-# Revision 1.2  2003-04-18 13:21:16  ncq
+# Revision 1.3  2003-04-28 20:47:15  ncq
+# - factored out gmClinicalViews.sql
+#
+# Revision 1.2  2003/04/18 13:21:16  ncq
 # - include new script gmIdentityViews.sql
 #
 # Revision 1.1  2003/03/30 22:18:53  ncq
