--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -63,6 +63,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
+sql/gmClinicalViews.sql
 $schema$
 
 #----------------------------------
@@ -152,7 +153,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.2  2003-04-18 13:21:16  ncq
+# Revision 1.3  2003-04-28 20:47:15  ncq
+# - factored out gmClinicalViews.sql
+#
+# Revision 1.2  2003/04/18 13:21:16  ncq
 # - include new script gmIdentityViews.sql
 #
 # Revision 1.1  2003/03/30 22:18:53  ncq
