- import some schema files at the database level, too - add corresponding schema list in the config files

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -45,7 +45,6 @@ registration database = core
 
 schema = $schema$
 sql/gmconfiguration.sql
-sql/gmServices.sql
 $schema$
 
 
@@ -102,6 +101,11 @@ $schema$
 [database core]
 name = gnumed-public
 server alias = local host
+schema = $schema$
+sql/gmSchemaRevision.sql
+sql/gmServices.sql
+sql/gmI18N.sql
+$schema$
 
 #----------------------------------
 [server local host]
@@ -169,7 +173,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.5  2003-04-28 20:47:15  ncq
+# Revision 1.6  2003-05-12 12:47:25  ncq
+# - import some schema files at the database level, too
+# - add corresponding schema list in the config files
+#
+# Revision 1.5  2003/04/28 20:47:15  ncq
 # - factored out gmClinicalViews.sql
 #
 # Revision 1.4  2003/04/18 13:21:16  ncq
