--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -38,7 +38,6 @@ postgres version = 7.1
 registration database = gm-archive
 schema = $schema$
 sql/gmconfiguration.sql
-sql/gmServices.sql
 $schema$
 
 # first one already imports gmServices, so ...
@@ -76,6 +75,12 @@ $schema$
 [database gm-archive]
 name = gm-archive-sample
 server alias = local host
+schema = $schema$
+sql/gmSchemaRevision.sql
+sql/gmServices.sql
+sql/gmI18N.sql
+$schema$
+
 
 #----------------------------------
 # servers
@@ -146,7 +151,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.3  2003-04-18 13:21:16  ncq
+# Revision 1.4  2003-05-12 12:47:25  ncq
+# - import some schema files at the database level, too
+# - add corresponding schema list in the config files
+#
+# Revision 1.3  2003/04/18 13:21:16  ncq
 # - include new script gmIdentityViews.sql
 #
 # Revision 1.2  2003/04/07 11:15:02  ncq
