--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -45,7 +45,6 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmconfiguration.sql
-sql/gmServices.sql
 $schema$
 
 [service demographics]
@@ -82,6 +81,11 @@ $schema$
 [database core]
 name = gnumed
 server alias = local host
+schema = $schema$
+sql/gmSchemaRevision.sql
+sql/gmServices.sql
+sql/gmI18N.sql
+$schema$
 
 #----------------------------------
 # servers
@@ -164,7 +168,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.3  2003-04-28 20:47:15  ncq
+# Revision 1.4  2003-05-12 12:47:25  ncq
+# - import some schema files at the database level, too
+# - add corresponding schema list in the config files
+#
+# Revision 1.3  2003/04/28 20:47:15  ncq
 # - factored out gmClinicalViews.sql
 #
 # Revision 1.2  2003/04/18 13:21:16  ncq
