- add gmAudit to database level schema

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -105,6 +105,7 @@ schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
+sql/gmAudit.sql
 $schema$
 
 #----------------------------------
@@ -173,7 +174,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.6  2003-05-12 12:47:25  ncq
+# Revision 1.7  2003-05-13 14:38:19  ncq
+# - add gmAudit to database level schema
+#
+# Revision 1.6  2003/05/12 12:47:25  ncq
 # - import some schema files at the database level, too
 # - add corresponding schema list in the config files
 #
