- add gmAudit.sql to database level schema

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -84,6 +84,7 @@ schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
+sql/gmAudit.sql
 $schema$
 
 #----------------------------------
@@ -168,7 +169,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.4  2003-05-12 12:47:25  ncq
+# Revision 1.5  2003-05-14 07:27:54  ncq
+# - add gmAudit.sql to database level schema
+#
+# Revision 1.4  2003/05/12 12:47:25  ncq
 # - import some schema files at the database level, too
 # - add corresponding schema list in the config files
 #
