--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -71,6 +71,9 @@ $schema$
 [database core]
 name = gnumed-new
 server alias = local host
+audit marker table = audit_mark
+audit trail parent table = audit_trail
+audit trail table prefix = log_
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -158,7 +161,11 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.5  2003-05-14 07:29:55  ncq
+# Revision 1.6  2003-05-22 12:53:41  ncq
+# - add automatic audit trail generation
+# - add options for that
+#
+# Revision 1.5  2003/05/14 07:29:55  ncq
 # - add gmAudit.sql to database level schema
 #
 # Revision 1.4  2003/05/12 12:47:25  ncq
