--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -75,6 +75,9 @@ $schema$
 [database gm-archive]
 name = gm-archive-sample
 server alias = local host
+audit marker table = audit_mark
+audit trail parent table = audit_trail
+audit trail table prefix = log_
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -151,7 +154,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.5  2003-05-14 07:27:54  ncq
+# Revision 1.6  2003-05-22 12:53:41  ncq
+# - add automatic audit trail generation
+# - add options for that
+#
+# Revision 1.5  2003/05/14 07:27:54  ncq
 # - add gmAudit.sql to database level schema
 #
 # Revision 1.4  2003/05/12 12:47:25  ncq
