--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -101,6 +101,9 @@ $schema$
 [database core]
 name = gnumed-public
 server alias = local host
+audit marker table = audit_mark
+audit trail parent table = audit_trail
+audit trail table prefix = log_
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -174,7 +177,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.7  2003-05-13 14:38:19  ncq
+# Revision 1.8  2003-05-22 12:53:41  ncq
+# - add automatic audit trail generation
+# - add options for that
+#
+# Revision 1.7  2003/05/13 14:38:19  ncq
 # - add gmAudit to database level schema
 #
 # Revision 1.6  2003/05/12 12:47:25  ncq
